--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,9 @@ permissions:
 env:
   OWRT_TAG: "v24.10.5"
   OWRT_REPO: "https://github.com/openwrt/openwrt.git"
+  OWRT_BASE: "24.10.5"
+  PROFILE: "clean"
+  TARGET: "x86_64"
 
 jobs:
   build:
@@ -31,7 +34,6 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-
           if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
             rel="${{ github.event.inputs.release_version }}"
           else
@@ -39,7 +41,6 @@ jobs:
             rel="$(echo "$tag" | grep -oE 'v[0-9]+(\.[0-9]+){0,2}' || true)"
             [[ -n "$rel" ]] || rel="v1.0"
           fi
-
           echo "release=$rel" >> "$GITHUB_OUTPUT"
           echo "Release: $rel"
 
@@ -47,7 +48,6 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/powershell || true
           df -h
 
@@ -70,7 +70,6 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
             build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
@@ -78,7 +77,6 @@ jobs:
             file wget curl ca-certificates time \
             python3 python3-distutils python3-setuptools python3-pyelftools \
             gperf swig subversion mercurial
-
           git --version
           python3 --version
 
@@ -86,7 +84,6 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-
           git clone --depth=1 --branch "${OWRT_TAG}" "${OWRT_REPO}" openwrt
           : > openwrt/build.log
 
@@ -94,7 +91,6 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-
           cd openwrt
           ./scripts/feeds update -a 2>&1 | tee -a build.log
           ./scripts/feeds install -a -f 2>&1 | tee -a build.log
@@ -103,8 +99,8 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-
           cd openwrt
+
           cp "${GITHUB_WORKSPACE}/configs/x86_64-clean.config" .config
 
           chmod +x "${GITHUB_WORKSPACE}/scripts/diy.sh"
@@ -116,7 +112,6 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-
           cd openwrt
           make download -j"$(nproc)" 2>&1 | tee -a build.log
 
@@ -124,20 +119,32 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-
           cd openwrt
           make -j"$(nproc)" 2>&1 | tee -a build.log || make -j1 V=s 2>&1 | tee -a build.log
 
-      - name: Generate SHA256SUMS
+      - name: Organize and rename files (HarryWrt naming)
         shell: bash
         run: |
           set -euo pipefail
           cd openwrt/bin/targets/x86/64
-          ls -lah
-          sha256sum *combined*.img.gz > SHA256SUMS
-          sha256sum SHA256SUMS >> SHA256SUMS.self
-          echo "Generated SHA256SUMS:"
-          cat SHA256SUMS
+
+          REL="${{ steps.meta.outputs.release }}"
+          PREFIX="HarryWrt-${{ env.OWRT_BASE }}-${{ env.PROFILE }}-${REL}-${{ env.TARGET }}"
+
+          BIOS_SQ="$(ls -1 *squashfs-combined.img.gz | head -n 1)"
+          UEFI_SQ="$(ls -1 *squashfs-combined-efi.img.gz | head -n 1)"
+          BIOS_E4="$(ls -1 *ext4-combined.img.gz | head -n 1)"
+          UEFI_E4="$(ls -1 *ext4-combined-efi.img.gz | head -n 1)"
+
+          cp -f "$BIOS_SQ" "${PREFIX}-squashfs-bios.img.gz"
+          cp -f "$UEFI_SQ" "${PREFIX}-squashfs-uefi.img.gz"
+          cp -f "$BIOS_E4" "${PREFIX}-ext4-bios.img.gz"
+          cp -f "$UEFI_E4" "${PREFIX}-ext4-uefi.img.gz"
+
+          sha256sum ${PREFIX}-*.img.gz > SHA256SUMS
+
+          echo "Output files:"
+          ls -lah ${PREFIX}-*.img.gz SHA256SUMS
 
       - name: Upload build log artifact
         if: always()
@@ -146,13 +153,13 @@ jobs:
           name: Log-clean-${{ steps.meta.outputs.release }}
           path: openwrt/build.log
 
-      - name: Upload firmware artifacts (BIOS + UEFI)
+      - name: Upload firmware artifacts
         if: success()
         uses: actions/upload-artifact@v4
         with:
-          name: HarryWrt-24.10.5-clean-${{ steps.meta.outputs.release }}-x86_64
+          name: HarryWrt-${{ env.OWRT_BASE }}-${{ env.PROFILE }}-${{ steps.meta.outputs.release }}-${{ env.TARGET }}
           path: |
-            openwrt/bin/targets/x86/64/*combined*.img.gz
+            openwrt/bin/targets/x86/64/HarryWrt-${{ env.OWRT_BASE }}-${{ env.PROFILE }}-${{ steps.meta.outputs.release }}-${{ env.TARGET }}-*.img.gz
             openwrt/bin/targets/x86/64/SHA256SUMS
 
       - name: Publish GitHub Release (tag builds only)
@@ -164,20 +171,13 @@ jobs:
             Base: OpenWrt 24.10.5 (x86_64)
             Profile: Clean Edition
 
-            Included:
-            - LuCI (HTTPS)
-            - Argon Theme
-            - luci-compat
-            - dnsmasq-full (dnsmasq disabled)
-            - bash, curl, htop
-            - ip-full, iperf3, tcpdump, ethtool
-            - nftables, iptables-nft
-            - kmod-tun
-            - ca-bundle, openssl-util
+            Recommended:
+            - squashfs-uefi for UEFI systems
+            - squashfs-bios for legacy BIOS systems
 
             Images:
-            - combined BIOS image
-            - combined EFI image
+            - squashfs (bios, uefi)
+            - ext4 (bios, uefi)
 
             Default:
             - Hostname: HarryWrt
@@ -189,7 +189,7 @@ jobs:
             Integrity:
             - SHA256SUMS is attached to this release
           files: |
-            openwrt/bin/targets/x86/64/*combined*.img.gz
+            openwrt/bin/targets/x86/64/HarryWrt-${{ env.OWRT_BASE }}-${{ env.PROFILE }}-${{ steps.meta.outputs.release }}-${{ env.TARGET }}-*.img.gz
             openwrt/bin/targets/x86/64/SHA256SUMS
             openwrt/build.log
         env:
