--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -1,40 +1,33 @@
-# File: configs/x86_64-clean.config
-
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
-CONFIG_TARGET_IMAGES_GZIP=y
 
 CONFIG_TARGET_ROOTFS_PARTSIZE=1024
+CONFIG_TARGET_IMAGES_GZIP=y
 
+# LuCI Web UI
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-ssl=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-compat=y
 
+# Shell & tools
 CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_openssl-util=y
 
-# DNS (avoid variant conflicts)
-# CONFIG_PACKAGE_dnsmasq is not set
-CONFIG_PACKAGE_dnsmasq-full=y
-
+# Networking tools
 CONFIG_PACKAGE_ip-full=y
-CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_tcpdump=y
 CONFIG_PACKAGE_ethtool=y
 
-CONFIG_PACKAGE_lsblk=y
-CONFIG_PACKAGE_block-mount=y
-CONFIG_PACKAGE_fdisk=y
-CONFIG_PACKAGE_e2fsprogs=y
-
+# Firewall base
 CONFIG_PACKAGE_nftables=y
 CONFIG_PACKAGE_iptables-nft=y
-CONFIG_PACKAGE_kmod-tun=y
 
-CONFIG_PACKAGE_zoneinfo-asia=y
+# Required for VPN/tunnels
+CONFIG_PACKAGE_kmod-tun=y
