--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -5,21 +5,26 @@ CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 CONFIG_TARGET_IMAGES_GZIP=y
 
-# LuCI Web UI
+# LuCI
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-ssl=y
-CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-compat=y
+
+# Theme (included, not default)
+CONFIG_PACKAGE_luci-theme-argon=y
 
 # Shell & tools
 CONFIG_PACKAGE_bash=y
-CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_wget-ssl=y
+CONFIG_PACKAGE_unzip=y
+
+# TLS / certificates
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_openssl-util=y
 
-# Networking tools
+# Network utilities
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_tcpdump=y
@@ -29,5 +34,5 @@ CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_nftables=y
 CONFIG_PACKAGE_iptables-nft=y
 
-# Required for VPN/tunnels
+# Tun device support
 CONFIG_PACKAGE_kmod-tun=y
