--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -2,37 +2,89 @@ CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
 
-CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 CONFIG_TARGET_IMAGES_GZIP=y
+CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 
-# LuCI
+# ------------------------------------------------------------
+# LuCI (Clean base UI)
+# ------------------------------------------------------------
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-ssl=y
 CONFIG_PACKAGE_luci-compat=y
 
-# Theme (included, not default)
-CONFIG_PACKAGE_luci-theme-argon=y
-
-# Shell & tools
+# ------------------------------------------------------------
+# Tools
+# ------------------------------------------------------------
 CONFIG_PACKAGE_bash=y
-CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_unzip=y
+CONFIG_PACKAGE_htop=y
 
-# TLS / certificates
+# Common runtime library (important for many third-party packages)
+CONFIG_PACKAGE_libstdcpp=y
+
+# ------------------------------------------------------------
+# Base security
+# ------------------------------------------------------------
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_openssl-util=y
 
+# ------------------------------------------------------------
 # Network utilities
+# ------------------------------------------------------------
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_tcpdump=y
 CONFIG_PACKAGE_ethtool=y
+CONFIG_PACKAGE_resolveip=y
 
-# Firewall base
+# ------------------------------------------------------------
+# Firewall / nftables stack (fw4)
+# ------------------------------------------------------------
 CONFIG_PACKAGE_nftables=y
 CONFIG_PACKAGE_iptables-nft=y
 
-# Tun device support
+# Prefer dnsmasq-full for advanced features
+CONFIG_PACKAGE_dnsmasq-full=y
+# CONFIG_PACKAGE_dnsmasq is not set
+
+# ------------------------------------------------------------
+# Kernel: core plumbing (commonly required by proxy stacks)
+# ------------------------------------------------------------
 CONFIG_PACKAGE_kmod-tun=y
+
+CONFIG_PACKAGE_kmod-nf-conntrack=y
+CONFIG_PACKAGE_kmod-nf-conntrack6=y
+CONFIG_PACKAGE_kmod-nf-nat=y
+CONFIG_PACKAGE_kmod-nfnetlink=y
+
+# Extra safety: common netfilter helpers used by various apps
+CONFIG_PACKAGE_kmod-nf-reject=y
+CONFIG_PACKAGE_kmod-nf-log=y
+
+# ------------------------------------------------------------
+# Kernel: nftables proxy helpers (TProxy path in fw4/nft world)
+# ------------------------------------------------------------
+CONFIG_PACKAGE_kmod-nft-socket=y
+CONFIG_PACKAGE_kmod-nft-compat=y
+CONFIG_PACKAGE_kmod-nft-tproxy=y
+
+# ------------------------------------------------------------
+# Kernel: iptables compatibility (some third-party scripts still check these)
+# ------------------------------------------------------------
+CONFIG_PACKAGE_kmod-ipt-core=y
+CONFIG_PACKAGE_kmod-ipt-nat=y
+CONFIG_PACKAGE_kmod-ipt-conntrack=y
+CONFIG_PACKAGE_kmod-ipt-extra=y
+CONFIG_PACKAGE_kmod-ipt-tproxy=y
+
+# Bridge/netfilter (often needed in virtualization / bridged LAN setups)
+CONFIG_PACKAGE_kmod-br-netfilter=y
+
+# ------------------------------------------------------------
+# ipset chain (legacy but still required by many third-party tools)
+# ------------------------------------------------------------
+CONFIG_PACKAGE_libipset13=y
+CONFIG_PACKAGE_ipset=y
+CONFIG_PACKAGE_kmod-ipt-ipset=y
