--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -68,6 +68,29 @@ CONFIG_PACKAGE_kmod-ipt-nat=y
 CONFIG_PACKAGE_kmod-ipt-tproxy=y
 
 # ------------------------------------------------------------
+# Passwall2 Runtime Dependencies (Offline-friendly base)
+# ------------------------------------------------------------
+
+# Common libraries (required by multiple proxy components)
+CONFIG_PACKAGE_libev=y
+CONFIG_PACKAGE_libsodium=y
+CONFIG_PACKAGE_libudns=y
+
+# Kernel diag modules (required by sing-box)
+CONFIG_PACKAGE_kmod-inet-diag=y
+CONFIG_PACKAGE_kmod-netlink-diag=y
+
+# Utilities pulled by luci-app-passwall2 on install (avoid online fetch)
+CONFIG_PACKAGE_coreutils=y
+CONFIG_PACKAGE_coreutils-base64=y
+CONFIG_PACKAGE_coreutils-nohup=y
+CONFIG_PACKAGE_libuci-lua=y
+
+# Common engines (recommended; not strictly required for UI installation)
+CONFIG_PACKAGE_xray-core=y
+CONFIG_PACKAGE_sing-box=y
+
+# ------------------------------------------------------------
 # NOTE:
 # Do not force ipset / kmod-ipt-ipset here.
 # Official OpenWrt 24.10.x repos may not provide a compatible ipset chain.
