--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,8 +93,7 @@ jobs:
           set -euo pipefail
           cd openwrt
 
-          # Add Argon theme source into buildroot (not enabled by default unless selected in .config)
-          # Upstream: https://github.com/jerrykuku/luci-theme-argon
+          # Add Argon theme source into buildroot (enabled only if selected in .config)
           mkdir -p package/extra
           rm -rf package/extra/luci-theme-argon || true
           git clone --depth=1 https://github.com/jerrykuku/luci-theme-argon.git package/extra/luci-theme-argon 2>&1 | tee -a build.log
@@ -120,11 +119,50 @@ jobs:
 
           make defconfig 2>&1 | tee -a build.log
 
-          # Hard check: ensure Argon is actually selected in final .config
-          grep -qE '^CONFIG_PACKAGE_luci-theme-argon=y$' .config || {
-            echo "ERROR: luci-theme-argon is not enabled in final .config" | tee -a build.log
+          echo "Checking important packages in final .config..." | tee -a build.log
+          # These must be enabled for the offline-friendly proxy-ready base
+          MUST_Y=(
+            "CONFIG_PACKAGE_dnsmasq-full"
+            "CONFIG_PACKAGE_nftables"
+            "CONFIG_PACKAGE_iptables-nft"
+            "CONFIG_PACKAGE_kmod-nft-tproxy"
+            "CONFIG_PACKAGE_kmod-nft-socket"
+            "CONFIG_PACKAGE_kmod-nft-compat"
+            "CONFIG_PACKAGE_kmod-tun"
+            "CONFIG_PACKAGE_libev"
+            "CONFIG_PACKAGE_libsodium"
+            "CONFIG_PACKAGE_libudns"
+            "CONFIG_PACKAGE_kmod-inet-diag"
+            "CONFIG_PACKAGE_kmod-netlink-diag"
+            "CONFIG_PACKAGE_coreutils"
+            "CONFIG_PACKAGE_coreutils-base64"
+            "CONFIG_PACKAGE_coreutils-nohup"
+            "CONFIG_PACKAGE_libuci-lua"
+            "CONFIG_PACKAGE_xray-core"
+            "CONFIG_PACKAGE_sing-box"
+          )
+
+          missing=0
+          for k in "${MUST_Y[@]}"; do
+            if grep -qE "^${k}=y$" .config; then
+              echo "OK: ${k}=y" | tee -a build.log
+            else
+              echo "MISSING: ${k}=y" | tee -a build.log
+              missing=1
+            fi
+          done
+
+          # Argon is optional; do not fail if not selected
+          if grep -qE '^CONFIG_PACKAGE_luci-theme-argon=y$' .config; then
+            echo "OK: CONFIG_PACKAGE_luci-theme-argon=y (included)" | tee -a build.log
+          else
+            echo "NOTE: CONFIG_PACKAGE_luci-theme-argon is not enabled (optional)" | tee -a build.log
+          fi
+
+          if [[ "$missing" -ne 0 ]]; then
+            echo "ERROR: One or more required packages are not enabled in final .config." | tee -a build.log
             exit 1
-          }
+          fi
 
       - name: Download sources
         shell: bash
@@ -190,7 +228,8 @@ jobs:
             Profile: Clean Edition
 
             Notes:
-            - Argon theme is included but not set as the default LuCI theme.
+            - Argon theme source is included. It is enabled only if selected in the build config.
+            - This build is "proxy-ready" and includes offline-friendly runtime dependencies for installing Passwall2 UI from a local IPK.
 
             Recommended:
             - squashfs-uefi for UEFI systems
