--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,285 +1,94 @@
-# =========================
-# File 3: .github/workflows/build.yml
-# =========================
-name: Build HarryWrt (OpenWrt 24.10.5 Clean x86_64)
+CONFIG_TARGET_x86=y
+CONFIG_TARGET_x86_64=y
+CONFIG_TARGET_x86_64_DEVICE_generic=y
 
-on:
-  workflow_dispatch:
-    inputs:
-      release_version:
-        description: "Release version (e.g. v1.0)"
-        required: true
-        default: "v1.0"
-  push:
-    tags:
-      - "clean-24.10.5-v*"
+CONFIG_TARGET_IMAGES_GZIP=y
+CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 
-permissions:
-  contents: write
+# ------------------------------------------------------------
+# LuCI (Clean base UI)
+# ------------------------------------------------------------
+CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-ssl=y
+CONFIG_PACKAGE_luci-compat=y
+CONFIG_PACKAGE_luci-theme-bootstrap=y
+CONFIG_PACKAGE_luci-theme-argon=y
 
-env:
-  OWRT_TAG: "v24.10.5"
-  OWRT_REPO: "https://github.com/openwrt/openwrt.git"
-  OWRT_BASE: "24.10.5"
-  PROFILE: "clean"
-  TARGET: "x86_64"
+# ------------------------------------------------------------
+# Tools & Libraries
+# ------------------------------------------------------------
+CONFIG_PACKAGE_bash=y
+CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_wget-ssl=y
+CONFIG_PACKAGE_unzip=y
+CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_libstdcpp=y
+CONFIG_PACKAGE_procps-ng-ps=y
 
-jobs:
-  build:
-    runs-on: ubuntu-22.04
+# ------------------------------------------------------------
+# Base security & Network
+# ------------------------------------------------------------
+CONFIG_PACKAGE_ca-bundle=y
+CONFIG_PACKAGE_openssl-util=y
+CONFIG_PACKAGE_ip-full=y
+CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_tcpdump=y
+CONFIG_PACKAGE_ethtool=y
+CONFIG_PACKAGE_resolveip=y
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+# ------------------------------------------------------------
+# Firewall / nftables stack (fw4)
+# ------------------------------------------------------------
+CONFIG_PACKAGE_iptables-nft=y
 
-      - name: Determine release version
-        id: meta
-        shell: bash
-        run: |
-          set -euo pipefail
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-            rel="${{ github.event.inputs.release_version }}"
-          else
-            tag="${GITHUB_REF##*/}"
-            rel="$(echo "$tag" | grep -oE 'v[0-9]+(\.[0-9]+){0,2}' || true)"
-            [[ -n "$rel" ]] || rel="$tag"
-          fi
-          echo "release=$rel" >> "$GITHUB_OUTPUT"
-          echo "Release: $rel"
+# Compatibility: some LuCI apps / scripts still check iptables binaries
+CONFIG_PACKAGE_iptables=y
+CONFIG_PACKAGE_ip6tables=y
 
-      - name: Free disk space and enable swap
-        shell: bash
-        run: |
-          set -euo pipefail
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/powershell || true
-          df -h
+# ------------------------------------------------------------
+# DNS Services
+# ------------------------------------------------------------
+CONFIG_PACKAGE_dnsmasq-full=y
+# CONFIG_PACKAGE_dnsmasq is not set
 
-          SWAP_PATH="/mnt/gh-swapfile"
-          sudo swapoff "$SWAP_PATH" 2>/dev/null || true
-          sudo rm -f "$SWAP_PATH" || true
+# ------------------------------------------------------------
+# Kernel: TProxy & nftables base
+# ------------------------------------------------------------
+CONFIG_PACKAGE_kmod-tun=y
+CONFIG_PACKAGE_kmod-br-netfilter=y
+CONFIG_PACKAGE_kmod-nft-socket=y
+CONFIG_PACKAGE_kmod-nft-compat=y
+CONFIG_PACKAGE_kmod-nft-tproxy=y
+CONFIG_PACKAGE_kmodloader=y
 
-          if ! sudo fallocate -l 8G "$SWAP_PATH" 2>/dev/null; then
-            sudo dd if=/dev/zero of="$SWAP_PATH" bs=1M count=8192 status=progress
-          fi
+# ------------------------------------------------------------
+# Kernel: iptables compatibility
+# ------------------------------------------------------------
+CONFIG_PACKAGE_kmod-ipt-core=y
+CONFIG_PACKAGE_kmod-ipt-nat=y
+CONFIG_PACKAGE_kmod-ipt-tproxy=y
 
-          sudo chmod 600 "$SWAP_PATH"
-          sudo mkswap "$SWAP_PATH"
-          sudo swapon "$SWAP_PATH"
-          sudo swapon --show
-          free -h
+# ------------------------------------------------------------
+# Offline Installation "Must-Haves"
+# ------------------------------------------------------------
+CONFIG_PACKAGE_tcping=y
+CONFIG_PACKAGE_geoview=y
+CONFIG_PACKAGE_v2ray-geoip=y
+CONFIG_PACKAGE_v2ray-geosite=y
 
-      - name: Install build dependencies
-        shell: bash
-        run: |
-          set -euo pipefail
-          sudo apt-get update
-          sudo apt-get install -y --no-install-recommends \
-            build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
-            gettext git libncurses-dev libssl-dev rsync unzip zlib1g-dev \
-            file wget curl ca-certificates time \
-            python3 python3-distutils python3-setuptools python3-pyelftools \
-            gperf swig subversion mercurial
-          git --version
-          python3 --version
+# ------------------------------------------------------------
+# Runtime Dependencies
+# ------------------------------------------------------------
+CONFIG_PACKAGE_libev=y
+CONFIG_PACKAGE_libsodium=y
+CONFIG_PACKAGE_libudns=y
+CONFIG_PACKAGE_kmod-inet-diag=y
+CONFIG_PACKAGE_kmod-netlink-diag=y
+CONFIG_PACKAGE_coreutils=y
+CONFIG_PACKAGE_coreutils-base64=y
+CONFIG_PACKAGE_coreutils-nohup=y
+CONFIG_PACKAGE_libuci-lua=y
 
-      - name: Clone OpenWrt source
-        shell: bash
-        run: |
-          set -euo pipefail
-          git clone --depth=1 --branch "${OWRT_TAG}" "${OWRT_REPO}" openwrt
-          : > openwrt/build.log
-
-      - name: Add extra feed (general offline-friendly packages)
-        shell: bash
-        run: |
-          set -euo pipefail
-          cd openwrt
-          echo "src-git passwall_packages https://github.com/Openwrt-Passwall/openwrt-passwall-packages.git;main" >> feeds.conf.default
-
-      - name: Add extra packages (Argon theme sources)
-        shell: bash
-        run: |
-          set -euo pipefail
-          cd openwrt
-          mkdir -p package/extra
-          rm -rf package/extra/luci-theme-argon || true
-          git clone --depth=1 https://github.com/jerrykuku/luci-theme-argon.git package/extra/luci-theme-argon 2>&1 | tee -a build.log
-
-      - name: Update and install feeds
-        shell: bash
-        run: |
-          set -euo pipefail
-          cd openwrt
-          ./scripts/feeds update -a 2>&1 | tee -a build.log
-          ./scripts/feeds install -a -f 2>&1 | tee -a build.log
-
-      - name: Apply config and run DIY
-        shell: bash
-        run: |
-          set -euo pipefail
-          cd openwrt
-
-          cp "${GITHUB_WORKSPACE}/configs/x86_64-clean.config" .config
-
-          chmod +x "${GITHUB_WORKSPACE}/scripts/diy.sh"
-          bash "${GITHUB_WORKSPACE}/scripts/diy.sh" 2>&1 | tee -a build.log
-
-          # 1) First defconfig: let OpenWrt resolve dependencies once
-          make defconfig 2>&1 | tee -a build.log
-
-          # 2) Force-keep a few compatibility packages that may be auto-optimized away.
-          #    IMPORTANT: after this, DO NOT run make defconfig again.
-          force_y() {
-            local sym="$1"
-            sed -i -E "/^${sym}=|^# ${sym} is not set/d" .config
-            echo "${sym}=y" >> .config
-          }
-
-          force_y CONFIG_PACKAGE_iptables
-          force_y CONFIG_PACKAGE_ip6tables
-          force_y CONFIG_PACKAGE_procps-ng-ps
-          force_y CONFIG_PACKAGE_kmodloader
-
-          echo "Checking important packages in final .config..." | tee -a build.log
-
-          MUST_Y=(
-            "CONFIG_PACKAGE_dnsmasq-full"
-            "CONFIG_PACKAGE_iptables-nft"
-            "CONFIG_PACKAGE_iptables"
-            "CONFIG_PACKAGE_ip6tables"
-            "CONFIG_PACKAGE_kmod-nft-tproxy"
-            "CONFIG_PACKAGE_kmod-nft-socket"
-            "CONFIG_PACKAGE_kmod-nft-compat"
-            "CONFIG_PACKAGE_kmod-tun"
-            "CONFIG_PACKAGE_kmodloader"
-            "CONFIG_PACKAGE_libev"
-            "CONFIG_PACKAGE_libsodium"
-            "CONFIG_PACKAGE_libudns"
-            "CONFIG_PACKAGE_kmod-inet-diag"
-            "CONFIG_PACKAGE_kmod-netlink-diag"
-            "CONFIG_PACKAGE_coreutils"
-            "CONFIG_PACKAGE_coreutils-base64"
-            "CONFIG_PACKAGE_coreutils-nohup"
-            "CONFIG_PACKAGE_libuci-lua"
-            "CONFIG_PACKAGE_procps-ng-ps"
-            "CONFIG_PACKAGE_tcping"
-            "CONFIG_PACKAGE_geoview"
-            "CONFIG_PACKAGE_v2ray-geoip"
-            "CONFIG_PACKAGE_v2ray-geosite"
-            "CONFIG_PACKAGE_xray-core"
-            "CONFIG_PACKAGE_sing-box"
-          )
-
-          OPTIONAL_Y=(
-            "CONFIG_PACKAGE_luci-theme-argon"
-          )
-
-          missing=0
-          for k in "${MUST_Y[@]}"; do
-            if grep -qE "^${k}=y$" .config; then
-              echo "OK: ${k}=y" | tee -a build.log
-            else
-              echo "MISSING: ${k}=y" | tee -a build.log
-              missing=1
-            fi
-          done
-
-          for k in "${OPTIONAL_Y[@]}"; do
-            if grep -qE "^${k}=y$" .config; then
-              echo "OK: ${k}=y (optional)" | tee -a build.log
-            else
-              echo "NOTE: ${k} is not enabled (optional)" | tee -a build.log
-            fi
-          done
-
-          if [[ "$missing" -ne 0 ]]; then
-            echo "ERROR: One or more required packages are not enabled in final .config." | tee -a build.log
-            exit 1
-          fi
-
-      - name: Download sources
-        shell: bash
-        run: |
-          set -euo pipefail
-          cd openwrt
-          make download -j"$(nproc)" 2>&1 | tee -a build.log
-
-      - name: Build firmware
-        shell: bash
-        run: |
-          set -euo pipefail
-          cd openwrt
-          make -j"$(nproc)" 2>&1 | tee -a build.log || make -j1 V=s 2>&1 | tee -a build.log
-
-      - name: Organize and rename files (HarryWrt naming)
-        shell: bash
-        run: |
-          set -euo pipefail
-          cd openwrt/bin/targets/x86/64
-
-          REL="${{ steps.meta.outputs.release }}"
-          PREFIX="HarryWrt-${{ env.OWRT_BASE }}-${{ env.PROFILE }}-${REL}-${{ env.TARGET }}"
-
-          BIOS_SQ="$(ls -1 *squashfs-combined.img.gz | head -n 1)"
-          UEFI_SQ="$(ls -1 *squashfs-combined-efi.img.gz | head -n 1)"
-          BIOS_E4="$(ls -1 *ext4-combined.img.gz | head -n 1)"
-          UEFI_E4="$(ls -1 *ext4-combined-efi.img.gz | head -n 1)"
-
-          cp -f "$BIOS_SQ" "${PREFIX}-squashfs-bios.img.gz"
-          cp -f "$UEFI_SQ" "${PREFIX}-squashfs-uefi.img.gz"
-          cp -f "$BIOS_E4" "${PREFIX}-ext4-bios.img.gz"
-          cp -f "$UEFI_E4" "${PREFIX}-ext4-uefi.img.gz"
-
-          sha256sum ${PREFIX}-*.img.gz > SHA256SUMS
-
-          echo "Output files:"
-          ls -lah ${PREFIX}-*.img.gz SHA256SUMS
-
-      - name: Upload build log artifact
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: Log-clean-${{ steps.meta.outputs.release }}
-          path: openwrt/build.log
-
-      - name: Upload firmware artifacts
-        if: success()
-        uses: actions/upload-artifact@v4
-        with:
-          name: HarryWrt-${{ env.OWRT_BASE }}-${{ env.PROFILE }}-${{ steps.meta.outputs.release }}-${{ env.TARGET }}
-          path: |
-            openwrt/bin/targets/x86/64/HarryWrt-${{ env.OWRT_BASE }}-${{ env.PROFILE }}-${{ steps.meta.outputs.release }}-${{ env.TARGET }}-*.img.gz
-            openwrt/bin/targets/x86/64/SHA256SUMS
-
-      - name: Publish GitHub Release (tag builds only)
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v2
-        with:
-          name: HarryWrt Clean 24.10.5 ${{ steps.meta.outputs.release }} - x86_64
-          body: |
-            Base: OpenWrt 24.10.5 (x86_64)
-            Profile: Clean Edition
-
-            Notes:
-            - Argon theme is included but the default UI remains Bootstrap (stock-like).
-            - This build includes extra compatibility packages for offline environments.
-
-            Recommended:
-            - squashfs-uefi for UEFI systems
-            - squashfs-bios for legacy BIOS systems
-
-            Default:
-            - Hostname: HarryWrt
-            - Timezone: Asia/Hong_Kong
-
-            Rootfs:
-            - 1024MB (1GB)
-
-            Integrity:
-            - SHA256SUMS is attached to this release
-          files: |
-            openwrt/bin/targets/x86/64/HarryWrt-${{ env.OWRT_BASE }}-${{ env.PROFILE }}-${{ steps.meta.outputs.release }}-${{ env.TARGET }}-*.img.gz
-            openwrt/bin/targets/x86/64/SHA256SUMS
-            openwrt/build.log
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+# Core Engines
+CONFIG_PACKAGE_xray-core=y
+CONFIG_PACKAGE_sing-box=y
