--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -1,3 +1,5 @@
+# configs/x86_64-clean.config
+
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
@@ -24,7 +26,7 @@ CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_libstdcpp=y
 
-# Better process tools (for troubleshooting)
+# Better process tool (helps troubleshooting)
 CONFIG_PACKAGE_procps-ng-ps=y
 
 # ------------------------------------------------------------
@@ -47,7 +49,7 @@ CONFIG_PACKAGE_resolveip=y
 # ------------------------------------------------------------
 CONFIG_PACKAGE_iptables-nft=y
 
-# Compatibility: some scripts/LuCI apps still check iptables binaries
+# Compatibility: some LuCI apps / scripts still check iptables binaries
 CONFIG_PACKAGE_iptables=y
 CONFIG_PACKAGE_ip6tables=y
 
@@ -66,7 +68,7 @@ CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-nft-compat=y
 CONFIG_PACKAGE_kmod-nft-tproxy=y
 
-# Ensure module loader exists (tiny but useful)
+# Ensure module loader exists (stable, tiny)
 CONFIG_PACKAGE_kmodloader=y
 
 # ------------------------------------------------------------
@@ -78,7 +80,6 @@ CONFIG_PACKAGE_kmod-ipt-tproxy=y
 
 # ------------------------------------------------------------
 # Offline Installation "Must-Haves"
-# (So luci-app-passwall2.ipk can be uploaded & installed offline)
 # ------------------------------------------------------------
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_geoview=y
@@ -86,7 +87,7 @@ CONFIG_PACKAGE_v2ray-geoip=y
 CONFIG_PACKAGE_v2ray-geosite=y
 
 # ------------------------------------------------------------
-# Runtime Dependencies (Offline-friendly base)
+# Runtime Dependencies
 # ------------------------------------------------------------
 CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libsodium=y
