--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -1,5 +1,3 @@
-# configs/x86_64-clean.config
-
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
@@ -8,7 +6,7 @@ CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 
 # ------------------------------------------------------------
-# LuCI (Clean base UI)
+# LuCI (clean base UI)
 # ------------------------------------------------------------
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-ssl=y
@@ -17,7 +15,7 @@ CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-argon=y
 
 # ------------------------------------------------------------
-# Tools & Libraries
+# Tools & libraries
 # ------------------------------------------------------------
 CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_curl=y
@@ -25,9 +23,6 @@ CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_libstdcpp=y
-
-# Better process tool (helps troubleshooting)
-CONFIG_PACKAGE_procps-ng-ps=y
 
 # ------------------------------------------------------------
 # Base security
@@ -49,18 +44,14 @@ CONFIG_PACKAGE_resolveip=y
 # ------------------------------------------------------------
 CONFIG_PACKAGE_iptables-nft=y
 
-# Compatibility: some LuCI apps / scripts still check iptables binaries
-CONFIG_PACKAGE_iptables=y
-CONFIG_PACKAGE_ip6tables=y
-
 # ------------------------------------------------------------
-# DNS Services (Prefer dnsmasq-full)
+# DNS services
 # ------------------------------------------------------------
 CONFIG_PACKAGE_dnsmasq-full=y
 # CONFIG_PACKAGE_dnsmasq is not set
 
 # ------------------------------------------------------------
-# Kernel: Modern nftables & TProxy base (proxy-friendly)
+# Kernel: nftables & tproxy base
 # ------------------------------------------------------------
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-br-netfilter=y
@@ -68,18 +59,15 @@ CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-nft-compat=y
 CONFIG_PACKAGE_kmod-nft-tproxy=y
 
-# Ensure module loader exists (stable, tiny)
-CONFIG_PACKAGE_kmodloader=y
-
 # ------------------------------------------------------------
-# Kernel: iptables compatibility (legacy scripts)
+# Kernel: iptables compatibility
 # ------------------------------------------------------------
 CONFIG_PACKAGE_kmod-ipt-core=y
 CONFIG_PACKAGE_kmod-ipt-nat=y
 CONFIG_PACKAGE_kmod-ipt-tproxy=y
 
 # ------------------------------------------------------------
-# Offline Installation "Must-Haves"
+# Offline-ready packages (prebuilt)
 # ------------------------------------------------------------
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_geoview=y
@@ -87,20 +75,26 @@ CONFIG_PACKAGE_v2ray-geoip=y
 CONFIG_PACKAGE_v2ray-geosite=y
 
 # ------------------------------------------------------------
-# Runtime Dependencies
+# Runtime dependencies
 # ------------------------------------------------------------
 CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libsodium=y
 CONFIG_PACKAGE_libudns=y
-
 CONFIG_PACKAGE_kmod-inet-diag=y
 CONFIG_PACKAGE_kmod-netlink-diag=y
-
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_libuci-lua=y
 
-# Core Engines
+# Core engines
 CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_sing-box=y
+
+# ------------------------------------------------------------
+# Extra tickets (must be present)
+# ------------------------------------------------------------
+CONFIG_PACKAGE_iptables=y
+CONFIG_PACKAGE_ip6tables=y
+CONFIG_PACKAGE_procps-ng-ps=y
+CONFIG_PACKAGE_kmodloader=y
