--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,11 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
+
+          # Extra cleanup to improve available disk on GitHub runners
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/powershell || true
+          sudo rm -rf /usr/share/swift /usr/local/share/boost || true
+          sudo apt-get clean || true
           df -h
 
           SWAP_PATH="/mnt/gh-swapfile"
@@ -86,7 +90,7 @@ jobs:
           git clone --depth=1 --branch "${OWRT_TAG}" "${OWRT_REPO}" openwrt
           : > openwrt/build.log
 
-      - name: Add Passwall packages feed (for offline deps)
+      - name: Add Passwall packages feed (for offline Passwall2 deps)
         shell: bash
         run: |
           set -euo pipefail
@@ -123,30 +127,11 @@ jobs:
 
           make defconfig 2>&1 | tee -a build.log
 
-          EXTRA_PKGS=(
-            "CONFIG_PACKAGE_iptables"
-            "CONFIG_PACKAGE_ip6tables"
-            "CONFIG_PACKAGE_procps-ng"
-            "CONFIG_PACKAGE_procps-ng-ps"
-            "CONFIG_PACKAGE_kmodloader"
-          )
-
-          for pkg in "${EXTRA_PKGS[@]}"; do
-            sed -i "/^${pkg}[= ]/d" .config || true
-            sed -i "/^# ${pkg} is not set$/d" .config || true
-            echo "${pkg}=y" >> .config
-          done
-
           echo "Checking important packages in final .config..." | tee -a build.log
 
           MUST_Y=(
             "CONFIG_PACKAGE_dnsmasq-full"
             "CONFIG_PACKAGE_iptables-nft"
-            "CONFIG_PACKAGE_iptables"
-            "CONFIG_PACKAGE_ip6tables"
-            "CONFIG_PACKAGE_procps-ng"
-            "CONFIG_PACKAGE_procps-ng-ps"
-            "CONFIG_PACKAGE_kmodloader"
             "CONFIG_PACKAGE_kmod-nft-tproxy"
             "CONFIG_PACKAGE_kmod-nft-socket"
             "CONFIG_PACKAGE_kmod-nft-compat"
@@ -260,7 +245,9 @@ jobs:
 
             Notes:
             - Argon theme is included but the default UI remains Bootstrap (stock-like).
-            - Offline-ready base includes common runtime deps and engines.
+            - This build is Passwall2-ready for offline environments:
+              includes tcping/geoview/v2ray-geoip/v2ray-geosite and common runtime deps.
+              Users can upload luci-app-passwall2.ipk locally without relying on remote opkg feeds.
 
             Recommended:
             - squashfs-uefi for UEFI systems
